--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-redux": "^7.2.9",
     "react-router-dom": "^5.3.4",
     "redux": "^4.1.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
